# TSP-Solver

./: .gitignore  README.md  circle.txt  grid.txt
c++/: CMakeLists.txt
c++/include/: ComputeTSP.h  Context.h  DistanceFunctions.h  Environment.h  ExitStatus.h  GraphUtil.h  TSPSetters.h  TSPSolverFactory.h  Timer.h  Util.h  interface.h  types.h
c++/include/solvers/: AntColonySolver.h  ChristofidesSolver.h  IterativeSolver.h  NearestNeighbourSolver.h  TSPSolver.h
c++/include/structs/: AlgorithmSettings.h  SolutionData.h  TSP.h  TSPRaw.h
c++/src/: ComputeTSP.cpp  Context.cpp  GraphUtil.cpp  TSPSolverFactory.cpp  Timer.cpp  interface.cpp
c++/src/solvers/: AntColonySolver.cpp  ChristofidesSolver.cpp  IterativeSolver.cpp  NearestNeighbourSolver.cpp  TSPSolver.cpp
python/: definitions.py  main.py
python/src/: controller.py  tsp_parsed.py  tsp_parser.py
python/src/gui/: control_panel.py  display_panel.py  main_window.py  metadata_section.py  solution_panel.py
python/src/gui/controltabs/: create_tab.py  select_tab.py  solve_tab.py
python/src/gui/display/: progress_display.py  tsp_display.py
python/src/solver/: exit_status.py  solver_handler.py  solver_worker.py  tsp_cache.py  work_status.py
python/src/solver/structs/: algorithm_settings.py  solution_data.py  tsp.py  tsp_raw.py
scripts/: build_dll.sh  generate_circle.py  generate_grid.py
